2009-06-04  Thomas M Hinkle  <tom@minime>

	* src/lib/convert.py (NUM_AND_FRACTION_REGEXP): Fix typo for
	langauges without fraction support (ubuntu bug #352678)

	* test_deb.sh: Wipe out packages installed by python2.6 as well.

	* src/lib/reccard.py (RecCard.__init__): ++ get app if not handed
	GRM instance.

	* src/lib/plugin.py (RecEditorPlugin): ++documentation

	* src/lib/gtk_extras/dialog_extras.py (MessageDialog.setup_dialog):
	++title on dialog (helps out with testing w/ dogtail + just makes
	sense).

2009-06-04  Thomas Hinkle  <tom@grenville>

	* src/lib/importers/interactive_importer.py: Add support for old
	style "servings" tags to support legacy importer/markup scripts.

	* src/lib/importers/importer.py (Importer.commit_rec): Make sure
	yields is floated.

2009-05-30  Thomas Hinkle  <tom@grenville>

	* src/lib/reccard.py (RecSelector.ok): If recipe has a yields
	value, ask user how much they would like to add (this allows user
	to specify e.g. "3 cups" or "2 crusts", which is easier than
	changing the amount of recipes, which is what shows up in the
	ingredient list.
	(YieldSelector): Dialog for selecting amount of recipe based on
	yields value.
	(getYieldSelection): Convenience function for grabbing amount of
	recipe based on yields value (or not).

2009-05-30  Thomas M Hinkle  <tom@minime>

	* src/lib/test_plugin_loader.py: Add simple plugin_loader test
	file.
	* src/lib/gtk_extras/dialog_extras.py (ProgressDialog.setup_buttons):
	Bypass strange bug in pygtk with python2.6 which effectively
	changes ToggleButton API
	* Release 0.14.8

2009-05-29  Thomas M Hinkle  <tom@minime>

	* gourmet.desktop.in (_Comment): Update description of app.

	* setup.py (maybe_intltool): Apply patch from Rupert Swarbrick
	<rswarbrick@googlemail.com> which avoids running intltool-merge
	when not necessary.

2009-05-28  Thomas M Hinkle  <tom@minime>

	* MANIFEST: Don't include test_* files in MANIFEST.

2009-05-26  Thomas M Hinkle  <tom@minime>
