@@ -1,0 +1,2 @@
+import reccard_spellcheck_plugin
+plugins = [reccard_spellcheck_plugin.SpellPlugin]
